--- a/nodekb/package.json
+++ b/nodekb/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "express": "^4.17.1",
@@ -20,6 +21,8 @@
     "express-session": "^1.16.2",
     "express-validator": "^6.0.1",
     "mongoose": "^5.6.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.4"
   }
 }
